sidebar fix on mobile

--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -43,8 +43,7 @@
   border-top-right-radius: 9999px;
 }
 
-
-#sidebar ul li:hover{
+#sidebar ul li:hover {
   background: rgba(255, 255, 255, 0.05);
   border-bottom-right-radius: 9999px;
   border-top-right-radius: 9999px;
@@ -95,45 +94,144 @@
 
 }
 
-
-#sidebar{
-  a{
+#sidebar {
+  a {
     text-decoration: none !important;
   }
 }
+
 #sidebar.minified {
   padding-left: .5rem !important;
   padding-right: .5rem !important;
-  width: 80px !important;
   min-width: 80px;
-  .hide-min {
-    display: none;
-  }
-
-
-  .user-section {
-    min-height: 50px;
-    //*:not(img){
-    //  display: none;
-    //}
-
-    img {
-      margin-left: 10px !important;
-    }
-  }
-  .sidebar-header {
-    padding: 0.6rem !important;
-  }
-  .remove-text-minified {
-    padding-left: 0 !important;
-    font-size: 0px !important;
-    min-height: 57px !important;
-  }
 
 }
 
+@media (min-width: 300px) {
+  #sidebar:not(.minified) {
+    height: 80px !important;
+    width: 80px !important;
+    overflow: hidden !important;
+    opacity: .6;
+    .toggle-lang{
+      flex-direction: column;
+    }
+
+  }
+
+  #sidebar.minified{
+    opacity: 0.9;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .wrapper:not(.collapsed) {
+    .body-container {
+      max-width: calc(95%) !important;
+      padding-left: 16.5rem;
+    }
+  }
+
+  .wrapper.collapsed {
+    .body-container {
+      max-width: calc(100% - 50px) !important;
+      padding-left: 5.5rem;
+    }
+  }
+
+  #sidebar{
+    position: fixed;
+  }
+  #sidebar.minified{
+    width: 80px !important;
+    .hide-min {
+      display: none;
+    }
+
+    .user-section {
+      min-height: 50px;
+      //*:not(img){
+      //  display: none;
+      //}
+
+      img {
+        margin-left: 10px !important;
+      }
+    }
+    .sidebar-header {
+      padding: 0.6rem !important;
+    }
+    .remove-text-minified {
+      padding-left: 0 !important;
+      font-size: 0px !important;
+      min-height: 57px !important;
+    }
+
+  }
+
+  #sidebar:not(.minified){
+    opacity: 1;
+  }
 
 
+}
+
+@media (min-width: 992px) {
+  .wrapper:not(.collapsed) {
+    .body-container {
+      max-width: calc(98%) !important;
+      padding-left: 16.5rem;
+    }
+  }
+
+  .wrapper.collapsed {
+    .body-container {
+      max-width: calc(100% - 50px) !important;
+      padding-left: 5.5rem;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .wrapper.collapsed {
+    .body-container {
+      max-width: calc(100% - 100px) !important;
+    }
+  }
+
+  .wrapper:not(.collapsed) {
+    .body-container {
+      max-width: calc(95%) !important;
+    }
+  }
+}
 
 
+@media only screen and (min-width: 1350px) {
+  .wrapper.collapsed {
+    .body-container {
+      max-width: calc(100% - 50px) !important;
+    }
+  }
 
+  .wrapper:not(.collapsed) {
+    .body-container {
+      max-width: calc(95%) !important;
+    }
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+  .wrapper.collapsed {
+    .body-container {
+      max-width: calc(100% - 200px) !important;
+    }
+  }
+  .wrapper:not(.collapsed) {
+    .body-container {
+      max-width: calc(95%) !important;
+
+    }
+  }
+}
