--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import "~tailwindcss/utilities.css";
 @import "~tailwindcss/preflight.css";
 @import '~fullcalendar/dist/fullcalendar.css';
+
 @import './style.css';
 @import './breadcrumbs';
 
@@ -899,93 +900,24 @@ body, html {
   transform: rotate(45deg);
 }
 
-.wrapper:not(.collapsed) {
-  .body-container {
-    max-width: calc(80%) !important;
-  }
-}
 
 @media only screen and (min-width: 300px) {
   .wrapper.collapsed {
     .body-container {
-      max-width: calc(100% - 10px) !important;
+      max-width: calc(100% - 10px) ;
     }
   }
 
   .wrapper:not(.collapsed) {
     .body-container {
-      max-width: 100% !important;
+      max-width: 100%;
+      padding-right: 20px;
     }
   }
 }
 
-@media only screen and (min-width: 768px) {
-  .wrapper.collapsed {
-    .body-container {
-      max-width: calc(100% - 90px) !important;
-    }
-  }
 
-  .wrapper:not(.collapsed) {
-    .body-container {
-      max-width: calc(73%) !important;
-    }
-  }
-}
 
-@media only screen and (min-width: 992px) {
-  .wrapper.collapsed {
-    .body-container {
-      max-width: calc(100% - 100px) !important;
-    }
-  }
-
-  .wrapper:not(.collapsed) {
-    .body-container {
-      max-width: calc(74%) !important;
-    }
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .wrapper.collapsed {
-    .body-container {
-      max-width: calc(100% - 120px) !important;
-    }
-  }
-
-  .wrapper:not(.collapsed) {
-    .body-container {
-      max-width: calc(78%) !important;
-    }
-  }
-}
-@media only screen and (min-width: 1350px) {
-  .wrapper.collapsed {
-    .body-container {
-      max-width: calc(100% - 10px) !important;
-    }
-  }
-
-  .wrapper:not(.collapsed) {
-    .body-container {
-      max-width: calc(80%) !important;
-    }
-  }
-}
-
-@media only screen and (min-width: 1500px) {
-  .wrapper.collapsed {
-    .body-container {
-      max-width: calc(100% - 250px) !important;
-    }
-  }
-  .wrapper:not(.collapsed) {
-    .body-container {
-      max-width: calc(80%) !important;
-    }
-  }
-}
 
 @media only screen and (max-width: 768px) {
   #sidebar {
@@ -1033,13 +965,6 @@ body, html {
   }
 }
 
-@media only screen and (max-width: 500px) {
-  #sidebar.minified{
-    height: 80px;
-    overflow: hidden;
-    opacity: 0.6;
-  }
-}
 
 [dir=rtl] .fa-chevron-right,
 [dir=rtl] .fa-chevron-left{
